--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 !Displays executed SQL statements in logs
 spring.jpa.show-sql=true
+!Sets the base URL for the REST API
+spring.data.rest.basePath=/api
