Added 'My Ideas' page and h2 in-memory database.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,20 @@
 spring.jpa.show-sql=true
 !Sets the base URL for the REST API
 spring.data.rest.basePath=/api
+
+!Enables h2 in-memory database
+spring.h2.console.enabled=true
+!Specifies the h2 console path
+spring.h2.console.path=/h2-console
+
+!Datasource configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=admin
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.h2.Driver
+
+!The following configures how the schema tool management will
+!manipulate the database schema at startup.
+!"update" value will not remove a column or constraint that have
+!existed previously from a prior run.
+spring.jpa.hibernate.ddl-auto=update
