--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-!Displays executed SQL statements in logs
+!Displays executed SQL statements in console
 spring.jpa.show-sql=true
+
 !Sets the base URL for the REST API
 spring.data.rest.basePath=/api
 
@@ -8,10 +9,13 @@ spring.h2.console.enabled=true
 !Specifies the h2 console path
 spring.h2.console.path=/h2-console
 
-!Datasource configuration
+!h2 datasource configuration
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=admin
 spring.datasource.password=password
+!The following error in the h2 driver name is displayed
+!because the dependecies scope value is runtime.
+!If you change it to compile the error will disappear
 spring.datasource.driver-class-name=org.h2.Driver
 
 !The following configures how the schema tool management will
