Added delete account functionality and allowed connection to h2 database through heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,11 @@
 !Displays executed SQL statements in console
 spring.jpa.show-sql=true
-
 !Sets the base URL for the REST API
 spring.data.rest.basePath=/api
-
 !Enables h2 in-memory database
 spring.h2.console.enabled=true
 !Specifies the h2 console path
 spring.h2.console.path=/h2-console
-
 !h2 datasource configuration
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=admin
@@ -17,7 +14,8 @@ spring.datasource.password=password
 !because the dependecies scope value is runtime.
 !If you change it to compile the error will disappear
 spring.datasource.driver-class-name=org.h2.Driver
-
+!To allow connection to h2 in-memory database through heroku
+spring.h2.console.settings.web-allow-others=true
 !The following configures how the schema tool management will
 !manipulate the database schema at startup.
 !"update" value will not remove a column or constraint that have
